Added LTspice files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
-# Ignore list for Eagle, a PCB layout tool
+#
+# Editor backup files
+#
+*.bak
+*~
 
-# Backup files
+
+#
+# EAGLE files
+#
+eagle.epf
 *.s#?
 *.b#?
 *.l#?
 
-# Eagle project file
-# It contains a serial number and references to the file structure
-# on your computer.
-# comment the following line if you want to have your project file included.
-eagle.epf
 
+#
 # CAM files
+#
 *.$$$
 *.cmp
 *.ly2
@@ -22,15 +27,22 @@ eagle.epf
 *.sts
 *.crc
 *.crs
-
 *.dri
 *.drl
 *.gpi
 *.pls
-
 *.drd
 *.drd.*
-
 *.info
-
 *.eps
+
+
+#
+# LTSPICE files
+#
+*.raw
+*.log
+*.net
+*.plt
+*.fft
+
